--- a/main.ui
+++ b/main.ui
@@ -96,59 +96,108 @@ Author: Ken Boyd (Greynerd on github.com)
   <object class="GtkTextBuffer" id="chan_nighttime_buffer"/>
   <object class="GtkListStore" id="format_ls">
     <columns>
+      <!-- column-name id -->
+      <column type="gint"/>
       <!-- column-name format -->
       <column type="gchararray"/>
     </columns>
     <data>
       <row>
-        <col id="0" translatable="yes">Adult Contemporary</col>
+        <col id="0">0</col>
+        <col id="1" translatable="yes">Adult Contemporary</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Classic</col>
+        <col id="0">1</col>
+        <col id="1" translatable="yes">Classic</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Classic Rock</col>
+        <col id="0">2</col>
+        <col id="1" translatable="yes">Classic Rock</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Country</col>
+        <col id="0">3</col>
+        <col id="1" translatable="yes">Country</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Easy Listening</col>
+        <col id="0">4</col>
+        <col id="1" translatable="yes">Easy Listening</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Ethnic</col>
+        <col id="0">5</col>
+        <col id="1" translatable="yes">Ethnic</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Gospel</col>
+        <col id="0">6</col>
+        <col id="1" translatable="yes">Gospel</col>
       </row>
       <row>
-        <col id="0" translatable="yes">News</col>
+        <col id="0">7</col>
+        <col id="1" translatable="yes">News</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Oldies</col>
+        <col id="0">8</col>
+        <col id="1" translatable="yes">Oldies</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Pop Hit Radio</col>
+        <col id="0">9</col>
+        <col id="1" translatable="yes">Pop Hit Radio</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Religion</col>
+        <col id="0">10</col>
+        <col id="1" translatable="yes">Religion</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Rock</col>
+        <col id="0">11</col>
+        <col id="1" translatable="yes">Rock</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Spanish</col>
+        <col id="0">12</col>
+        <col id="1" translatable="yes">Spanish</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Sports</col>
+        <col id="0">13</col>
+        <col id="1" translatable="yes">Sports</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Talk/Personality</col>
+        <col id="0">14</col>
+        <col id="1" translatable="yes">Talk/Personality</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Variety</col>
+        <col id="0">15</col>
+        <col id="1" translatable="yes">Variety</col>
       </row>
     </data>
+  </object>
+  <object class="GtkEntryCompletion" id="format_completion">
+    <property name="model">format_ls</property>
+    <property name="text-column">1</property>
+    <property name="popup-completion">False</property>
+    <property name="popup-set-width">False</property>
+    <property name="popup-single-match">False</property>
+  </object>
+  <object class="GtkMenu" id="logbook_popup">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+    <child>
+      <object class="GtkMenuItem" id="pu_edit">
+        <property name="name">pu_edit</property>
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="label" translatable="yes">Edit</property>
+        <property name="use-underline">True</property>
+        <signal name="activate" handler="on_pu_edit_activate" swapped="no"/>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="pu_delete">
+        <property name="name">pu_delete</property>
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="label" translatable="yes">Delete</property>
+        <property name="use-underline">True</property>
+        <signal name="activate" handler="on_pu_delete_activate" swapped="no"/>
+      </object>
+    </child>
   </object>
   <object class="GtkListStore" id="logbook_store">
     <columns>
@@ -276,6 +325,7 @@ Author: Ken Boyd (Greynerd on github.com)
                 <property name="model">logbook_store</property>
                 <property name="reorderable">True</property>
                 <property name="search-column">4</property>
+                <signal name="button-press-event" handler="on_logbook_tree_button_press_event" swapped="no"/>
                 <signal name="key-press-event" handler="on_logbook_tree_key_press_event" swapped="no"/>
                 <child internal-child="selection">
                   <object class="GtkTreeSelection" id="lb_tree_selection">
@@ -287,7 +337,9 @@ Author: Ken Boyd (Greynerd on github.com)
                     <property name="visible">False</property>
                     <property name="title" translatable="yes">id</property>
                     <child>
-                      <object class="GtkCellRendererText"/>
+                      <object class="GtkCellRendererText">
+                        <property name="ellipsize">end</property>
+                      </object>
                       <attributes>
                         <attribute name="text">0</attribute>
                       </attributes>
@@ -357,7 +409,7 @@ Author: Ken Boyd (Greynerd on github.com)
                     <child>
                       <object class="GtkCellRendererText"/>
                       <attributes>
-                        <attribute name="text">4</attribute>
+                        <attribute name="text">5</attribute>
                       </attributes>
                     </child>
                   </object>
@@ -372,7 +424,7 @@ Author: Ken Boyd (Greynerd on github.com)
                     <child>
                       <object class="GtkCellRendererText"/>
                       <attributes>
-                        <attribute name="text">5</attribute>
+                        <attribute name="text">6</attribute>
                       </attributes>
                     </child>
                   </object>
@@ -385,7 +437,7 @@ Author: Ken Boyd (Greynerd on github.com)
                     <child>
                       <object class="GtkCellRendererText"/>
                       <attributes>
-                        <attribute name="text">6</attribute>
+                        <attribute name="text">7</attribute>
                       </attributes>
                     </child>
                   </object>
@@ -1139,6 +1191,7 @@ Author: Ken Boyd (Greynerd on github.com)
                 <property name="can-focus">True</property>
                 <property name="halign">start</property>
                 <property name="shadow-type">none</property>
+                <signal name="focus-in-event" handler="on_logging_station_focus_in_event" swapped="no"/>
                 <signal name="focus-out-event" handler="on_logging_station_focus_out_event" swapped="no"/>
                 <style>
                   <class name="logging"/>
@@ -1443,31 +1496,6 @@ Author: Ken Boyd (Greynerd on github.com)
               </packing>
             </child>
             <child>
-              <object class="GtkComboBox" id="logging_format">
-                <property name="name">logging_format</property>
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="double-buffered">False</property>
-                <property name="model">format_ls</property>
-                <property name="active">0</property>
-                <property name="has-entry">True</property>
-                <property name="entry-text-column">0</property>
-                <property name="id-column">0</property>
-                <child internal-child="entry">
-                  <object class="GtkEntry">
-                    <property name="can-focus">False</property>
-                  </object>
-                </child>
-                <style>
-                  <class name="logging"/>
-                </style>
-              </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">6</property>
-              </packing>
-            </child>
-            <child>
               <!-- n-columns=4 n-rows=3 -->
               <object class="GtkGrid">
                 <property name="visible">True</property>
@@ -1674,6 +1702,37 @@ Author: Ken Boyd (Greynerd on github.com)
               <packing>
                 <property name="left-attach">1</property>
                 <property name="top-attach">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkComboBox" id="logging_format">
+                <property name="name">logging_format</property>
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="model">format_ls</property>
+                <property name="has-frame">False</property>
+                <property name="has-entry">True</property>
+                <property name="entry-text-column">1</property>
+                <property name="id-column">0</property>
+                <child>
+                  <object class="GtkCellRendererCombo">
+                    <property name="model">format_ls</property>
+                    <property name="text-column">1</property>
+                  </object>
+                  <attributes>
+                    <attribute name="text">1</attribute>
+                  </attributes>
+                </child>
+                <child internal-child="entry">
+                  <object class="GtkEntry">
+                    <property name="can-focus">False</property>
+                    <property name="completion">format_completion</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="left-attach">1</property>
+                <property name="top-attach">6</property>
               </packing>
             </child>
             <child>
