--- a/main.ui
+++ b/main.ui
@@ -49,7 +49,7 @@ Author: Ken Boyd (Greynerd on github.com)
   <object class="GtkListStore" id="antenna_ls">
     <columns>
       <!-- column-name ID -->
-      <column type="guint64"/>
+      <column type="gchararray"/>
       <!-- column-name Name -->
       <column type="gchararray"/>
     </columns>
@@ -60,7 +60,7 @@ Author: Ken Boyd (Greynerd on github.com)
       </row>
       <row>
         <col id="0">1</col>
-        <col id="1" translatable="yes">Internal</col>
+        <col id="1" translatable="yes">Internal Whip</col>
       </row>
       <row>
         <col id="0">2</col>
@@ -71,6 +71,18 @@ Author: Ken Boyd (Greynerd on github.com)
         <col id="1" translatable="yes">50' Longwire</col>
       </row>
     </data>
+  </object>
+  <object class="GtkEntryCompletion" id="antenna_completion">
+    <property name="model">antenna_ls</property>
+    <property name="text_column">1</property>
+    <property name="inline_completion">True</property>
+    <property name="inline_selection">True</property>
+    <child>
+      <object class="GtkCellRendererText"/>
+      <attributes>
+        <attribute name="text">1</attribute>
+      </attributes>
+    </child>
   </object>
   <object class="GtkButton" id="button1">
     <property name="label" translatable="yes">Frequency</property>
@@ -106,18 +118,53 @@ Author: Ken Boyd (Greynerd on github.com)
   <object class="GtkTextBuffer" id="chan_nighttime_buffer"/>
   <object class="GtkListStore" id="format_ls">
     <columns>
-      <!-- column-name id -->
-      <column type="gint"/>
+      <!-- column-name ID -->
+      <column type="gchararray"/>
       <!-- column-name format -->
       <column type="gchararray"/>
     </columns>
+    <data>
+      <row>
+        <col id="0">1</col>
+        <col id="1" translatable="yes">News/Talk/Sports</col>
+      </row>
+      <row>
+        <col id="0">2</col>
+        <col id="1" translatable="yes">Country</col>
+      </row>
+      <row>
+        <col id="0">3</col>
+        <col id="1" translatable="yes">Spanish</col>
+      </row>
+      <row>
+        <col id="0">4</col>
+        <col id="1" translatable="yes">French</col>
+      </row>
+      <row>
+        <col id="0">5</col>
+        <col id="1" translatable="yes">Ethnic</col>
+      </row>
+      <row>
+        <col id="0">6</col>
+        <col id="1" translatable="yes">Variety</col>
+      </row>
+      <row>
+        <col id="0">7</col>
+        <col id="1" translatable="yes">Popular Music</col>
+      </row>
+    </data>
   </object>
   <object class="GtkEntryCompletion" id="format_completion">
     <property name="model">format_ls</property>
     <property name="text_column">1</property>
     <property name="inline_completion">True</property>
-    <property name="popup_single_match">False</property>
     <property name="inline_selection">True</property>
+    <child>
+      <object class="GtkCellRendererText"/>
+      <attributes>
+        <attribute name="text">1</attribute>
+      </attributes>
+    </child>
   </object>
   <object class="GtkMenu" id="logbook_popup">
     <property name="visible">True</property>
@@ -491,7 +538,6 @@ Author: Ken Boyd (Greynerd on github.com)
                     <property name="events">GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK | GDK_LEAVE_NOTIFY_MASK | GDK_STRUCTURE_MASK</property>
                     <property name="double_buffered">False</property>
                     <property name="model">logbook_store</property>
-                    <property name="headers_visible">False</property>
                     <property name="reorderable">True</property>
                     <property name="enable_search">False</property>
                     <property name="search_column">4</property>
@@ -543,7 +589,7 @@ Author: Ken Boyd (Greynerd on github.com)
                     </child>
                     <child>
                       <object class="GtkTreeViewColumn" id="lb_frequency">
-                        <property name="fixed_width">50</property>
+                        <property name="fixed_width">40</property>
                         <property name="title" translatable="yes">Freq</property>
                         <property name="alignment">1</property>
                         <child>
@@ -559,10 +605,7 @@ Author: Ken Boyd (Greynerd on github.com)
                     <child>
                       <object class="GtkTreeViewColumn" id="lb_station">
                         <property name="resizable">True</property>
-                        <property name="fixed_width">67</property>
-                        <property name="min_width">40</property>
-                        <property name="title" translatable="yes">Call Sign</property>
-                        <property name="alignment">1</property>
+                        <property name="title" translatable="yes">Station</property>
                         <child>
                           <object class="GtkCellRendererText"/>
                           <attributes>
@@ -574,8 +617,6 @@ Author: Ken Boyd (Greynerd on github.com)
                     <child>
                       <object class="GtkTreeViewColumn" id="lb_location">
                         <property name="resizable">True</property>
-                        <property name="fixed_width">175</property>
-                        <property name="min_width">100</property>
                         <property name="title" translatable="yes">Location</property>
                         <child>
                           <object class="GtkCellRendererText"/>
@@ -588,9 +629,6 @@ Author: Ken Boyd (Greynerd on github.com)
                     <child>
                       <object class="GtkTreeViewColumn" id="lb_signal">
                         <property name="resizable">True</property>
-                        <property name="sizing">autosize</property>
-                        <property name="fixed_width">195</property>
-                        <property name="min_width">50</property>
                         <property name="title" translatable="yes">Signal</property>
                         <child>
                           <object class="GtkCellRendererText"/>
@@ -603,7 +641,6 @@ Author: Ken Boyd (Greynerd on github.com)
                     <child>
                       <object class="GtkTreeViewColumn" id="lb_remarks">
                         <property name="resizable">True</property>
-                        <property name="min_width">10</property>
                         <property name="title" translatable="yes">Remarks</property>
                         <child>
                           <object class="GtkCellRendererText"/>
@@ -1185,7 +1222,7 @@ Author: Ken Boyd (Greynerd on github.com)
                         <property name="events">GDK_EXPOSURE_MASK | GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_MOTION_MASK | GDK_BUTTON1_MOTION_MASK | GDK_BUTTON2_MOTION_MASK | GDK_BUTTON3_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK | GDK_FOCUS_CHANGE_MASK | GDK_STRUCTURE_MASK | GDK_PROPERTY_CHANGE_MASK | GDK_VISIBILITY_NOTIFY_MASK | GDK_PROXIMITY_IN_MASK | GDK_PROXIMITY_OUT_MASK | GDK_SUBSTRUCTURE_MASK | GDK_SCROLL_MASK | GDK_TOUCH_MASK | GDK_SMOOTH_SCROLL_MASK | GDK_TOUCHPAD_GESTURE_MASK | GDK_TABLET_PAD_MASK</property>
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
-                        <property name="pixbuf">mwlog-locations.png</property>
+                        <property name="pixbuf">mwlog-locations.jpg</property>
                       </object>
                     </child>
                   </object>
@@ -1378,22 +1415,18 @@ Author: Ken Boyd (Greynerd on github.com)
   <object class="GtkListStore" id="receiver_ls">
     <columns>
       <!-- column-name ID -->
-      <column type="guint64"/>
+      <column type="gchararray"/>
       <!-- column-name Name -->
       <column type="gchararray"/>
     </columns>
     <data>
       <row>
         <col id="0">0</col>
-        <col id="1" translatable="yes">SDRPlay RSP1A</col>
+        <col id="1" translatable="yes">Tecsun PL-880</col>
       </row>
       <row>
         <col id="0">1</col>
-        <col id="1" translatable="yes">Kiwi SDR</col>
-      </row>
-      <row>
-        <col id="0">2</col>
-        <col id="1" translatable="yes">Tecsun PL-880</col>
+        <col id="1" translatable="yes">SDRPlay RSP1A</col>
       </row>
     </data>
   </object>
@@ -1735,9 +1768,8 @@ Author: Ken Boyd (Greynerd on github.com)
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="margin_top">2</property>
-                <property name="hexpand">False</property>
                 <property name="model">antenna_ls</property>
-                <property name="active">1</property>
+                <property name="active">0</property>
                 <property name="has_entry">True</property>
                 <property name="entry_text_column">1</property>
                 <property name="id_column">0</property>
@@ -1748,45 +1780,16 @@ Author: Ken Boyd (Greynerd on github.com)
                   </attributes>
                 </child>
                 <child internal-child="entry">
-                  <object class="GtkEntry">
+                  <object class="GtkEntry" id="logging_antenna_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="completion">antenna_completion</property>
                   </object>
                 </child>
               </object>
               <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">9</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkComboBox" id="logging_receiver">
-                <property name="width_request">250</property>
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="halign">start</property>
-                <property name="model">receiver_ls</property>
-                <property name="row_span_column">0</property>
-                <property name="has_entry">True</property>
-                <property name="entry_text_column">1</property>
-                <property name="id_column">0</property>
-                <child>
-                  <object class="GtkCellRendererText"/>
-                  <attributes>
-                    <attribute name="text">1</attribute>
-                  </attributes>
-                </child>
-                <child internal-child="entry">
-                  <object class="GtkEntry">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="completion">receiver_completion</property>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">8</property>
               </packing>
             </child>
             <child>
@@ -1992,15 +1995,12 @@ Author: Ken Boyd (Greynerd on github.com)
                 <property name="name">logging_format</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="hexpand">True</property>
                 <property name="model">format_ls</property>
                 <property name="has_entry">True</property>
                 <property name="entry_text_column">1</property>
                 <property name="id_column">0</property>
                 <child>
-                  <object class="GtkCellRendererCombo">
-                    <property name="model">format_ls</property>
-                  </object>
+                  <object class="GtkCellRendererText"/>
                   <attributes>
                     <attribute name="text">1</attribute>
                   </attributes>
@@ -2009,6 +2009,8 @@ Author: Ken Boyd (Greynerd on github.com)
                   <object class="GtkEntry" id="logging_format_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="events">GDK_EXPOSURE_MASK | GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_MOTION_MASK | GDK_BUTTON1_MOTION_MASK | GDK_BUTTON2_MOTION_MASK | GDK_BUTTON3_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK | GDK_FOCUS_CHANGE_MASK | GDK_STRUCTURE_MASK | GDK_PROPERTY_CHANGE_MASK | GDK_VISIBILITY_NOTIFY_MASK | GDK_PROXIMITY_IN_MASK | GDK_PROXIMITY_OUT_MASK | GDK_SUBSTRUCTURE_MASK | GDK_SCROLL_MASK | GDK_TOUCH_MASK | GDK_SMOOTH_SCROLL_MASK | GDK_TOUCHPAD_GESTURE_MASK | GDK_TABLET_PAD_MASK</property>
+                    <property name="completion">format_completion</property>
                   </object>
                 </child>
               </object>
@@ -2042,6 +2044,37 @@ Author: Ken Boyd (Greynerd on github.com)
                 <property name="left_attach">1</property>
                 <property name="top_attach">7</property>
                 <property name="width">5</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkComboBox" id="logging_receiver">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="model">receiver_ls</property>
+                <property name="active">1</property>
+                <property name="has_entry">True</property>
+                <property name="entry_text_column">1</property>
+                <property name="id_column">0</property>
+                <property name="active_id">1</property>
+                <child>
+                  <object class="GtkCellRendererText"/>
+                  <attributes>
+                    <attribute name="text">1</attribute>
+                  </attributes>
+                </child>
+                <child internal-child="entry">
+                  <object class="GtkEntry" id="logging_receiver_entry">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="completion">receiver_completion</property>
+                    <signal name="changed" handler="changed" swapped="no"/>
+                    <signal name="focus-out-event" handler="on_logging_receiver_entry_focus_out_event" swapped="no"/>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">8</property>
               </packing>
             </child>
             <child>
